Variables passed to templates from view

--- a/first_django_project/templates/index.html
+++ b/first_django_project/templates/index.html
@@ -217,8 +217,8 @@
       <div class="brand">
         <div class="logo">SA</div>
         <div>
-          <div style="font-weight:800">Saad Ali</div>
-          <div style="font-size:12px;color:var(--muted)">Senior Website Developer • WordPress & Technical SEO</div>
+          <div style="font-weight:800">{{Name}}</div>
+          <div style="font-size:12px;color:var(--muted)">{{experties}}</div>
         </div>
       </div>
 
