Make Migrate and Created Super User

--- a/first_django_project/templates/index.html
+++ b/first_django_project/templates/index.html
@@ -223,11 +223,11 @@
       </div>
 
       <nav aria-label="Main navigation" >
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#portfolio">Projects</a>
-        <a href="#experience">Experience</a>
-        <a href="#contact">Contact</a>
+        <a href="/about">About</a>
+        <a href="/services">Services</a>
+        <a href="/skills">Skills</a>
+        <a href="/experience">Experience</a>
+        <a href="/contact">Contact</a>
       </nav>
     </header>
 
