Image is used from Static Folder

--- a/first_django_project/templates/index.html
+++ b/first_django_project/templates/index.html
@@ -33,7 +33,7 @@
       <aside class="hero-photo" data-aos="fade-left" data-aos-delay="120">
         <div class="photo-wrap" title="Replace with your photo">
           <!-- Replace this src with your real photo -->
-          <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=4b516b4f18b03fef3f6f8b8e0b5a3ec7" alt="Saad Ali">
+          <img src="/static/img/1.png" alt="Saad Ali">
         </div>
       </aside>
     </div>
